# Python-Fastapi-practice

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: alembic.ini  config.py  main.py
app/infrastructure/: db.py
app/infrastructure/migrations/: env.py
app/infrastructure/models/: models.py  schemas.py
