[tool.poetry]
name = "test-energy-bid-API"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
lint.select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "ERA", # eradicate
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "RUF"  # Ruff-specific rules
    ]
line-length = 100
target-version = "py310"
